--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <nav>
             <ul>
                 <li><a href="https://soerenlausen.github.io/snoelx/">SNOLEX - page</a></li>
-                <li><a href="">Project 1 - Grey Wolf</a></li>
+                <li><a href="https://soerenlausen.github.io/Grey-Wolf-website/">Project 1 - Grey Wolf</a></li>
                 <li><a href="https://soerenlausen.github.io/Webtilgaengelighed/">Project 2 - Web Accessibility</a></li>
             </ul>
         </nav>
