--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <nav>
             <ul>
-                <li><a href="https://soerenlausen.github.io/snoelx/">SNOLEX - page</a></li>
+                <li><a href="https://soerenlausen.github.io/snoelx/">SNOELX - page</a></li>
                 <li><a href="https://soerenlausen.github.io/Grey-Wolf-website/">Project 1 - Grey Wolf</a></li>
                 <li><a href="https://soerenlausen.github.io/Webtilgaengelighed/">Project 2 - Web Accessibility</a></li>
             </ul>
