--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hub</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" type="image/x-icon" href="peepomegapog.png">
+    <link rel="icon" type="image/x-icon" href="peepomegapog.ico">
 </head>
 <body>
     <header>
         <nav>
             <ul>
-                <li><a href="https://soerenlausen.github.io/snoelx/">SNOELX - page</a></li>
+                <li><a href="https://snoelx.soerenlausen.dk">SNOELX - page</a></li>
                 <li><a href="https://soerenlausen.github.io/Grey-Wolf-website/">Project 1 - Grey Wolf</a></li>
                 <li><a href="https://soerenlausen.github.io/Webtilgaengelighed/">Project 2 - Web Accessibility</a></li>
             </ul>
