--- a/index.html
+++ b/index.html
@@ -17,5 +17,8 @@
             </ul>
         </nav>
     </header>
+    <main>
+        <a class="contact" href="mailto:contact@soerenlausen.dk">contact@soerenlausen.dk</a>
+    </main>
 </body>
 </html>
