--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <header>
+        <h1>SØREN<br>LAUSEN</h1>
+    </header>
+    <main>
         <nav>
             <ul>
                 <li><a href="https://snoelx.soerenlausen.dk">SNOELX - page</a></li>
@@ -16,8 +19,6 @@
                 <li><a href="https://soerenlausen.github.io/Webtilgaengelighed/">Project 2 - Web Accessibility</a></li>
             </ul>
         </nav>
-    </header>
-    <main>
         <a class="contact" href="mailto:contact@soerenlausen.dk">contact@soerenlausen.dk</a>
     </main>
 </body>
