--- a/index.html
+++ b/index.html
@@ -6,18 +6,24 @@
     <title>Hub</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" type="image/x-icon" href="peepomegapog.ico">
+    <link rel="stylesheet" href="https://use.typekit.net/yge5jcj.css">
 </head>
 <body>
     <header>
-        <h1>SØREN<br>LAUSEN</h1>
+        <h1>SØREN NOE<br>LAUSEN</h1>
     </header>
     <main>
         <nav>
             <ul>
+                <li><h2>PORTFOLIO:</h2></li>
                 <li><a href="https://snoelx.soerenlausen.dk">SNOELX - page</a></li>
-                <li><a href="https://soerenlausen.github.io/Grey-Wolf-website/">Project 1 - Grey Wolf</a></li>
-                <li><a href="https://soerenlausen.github.io/Webtilgaengelighed/">Project 2 - Web Accessibility</a></li>
+              	<li><a href="https://pasta.soerenlausen.dk">PLAYGROUND</a></li>
+              <br><br>
+                <li><a href="https://soerenlausen.dk/Grey-Wolf/">Project 1 - Grey Wolf</a></li>
+                <li><a href="https://soerenlausen.dk/wt/">Project 2 - Web Accessibility</a></li>
+              	<li><a href="https://godset.cyaim.dk">Project 3 - Godset Ung</a></li>
             </ul>
+            <img src="wowpic.jpg" alt="funny picture" class="fp">
         </nav>
         <a class="contact" href="mailto:contact@soerenlausen.dk">contact@soerenlausen.dk</a>
     </main>
