--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <li><a href="https://soerenlausen.dk/wt/">Project 2 - Web Accessibility</a></li>
               	<li><a href="https://godset.cyaim.dk">Project 3 - Godset Ung</a></li>
             </ul>
-            <img src="wowpic.jpg" alt="funny picture" class="fp">
+            <img src="img/wowpic.jpg" alt="funny picture" class="fp">
         </nav>
         <a class="contact" href="mailto:contact@soerenlausen.dk">contact@soerenlausen.dk</a>
     </main>
